замена url на сервере

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
                                 </p>
                             </div>
                             <div class="main_button-3">
-                                <a class="main_info-link" href="./pages/amarok.html">в&nbsp;виртуальный гараж</a>
+                                <a class="main_info-link" href="amarok.html">в&nbsp;виртуальный гараж</a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                     <div class="traffic_patrol-slide-6">
                         <div class="traffic_patrol_slider-wrapper swiper">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
+                                <a class="garage_model_card swiper-slide" href="amarok.html">
                                     <div class="slid_img">
                                         <picture>
 <!--                                            <source srcset="./img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
@@ -250,7 +250,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="garage_model_card swiper-slide" href="./pages/ford.html">
+                                <a class="garage_model_card swiper-slide" href="ford.html">
                                     <div class="slid_img">
                                         <picture>
 <!--                                            <source srcset="./img/layout/pages/main/slider/ford.webp" type="image/webp">-->
@@ -281,7 +281,7 @@
                         </div>
                     </div>
                     <div class="traffic_patrol-new_NOSLIDER">
-                        <a class="garage_model_card NOSLIDE_1" href="./pages/amarok.html">
+                        <a class="garage_model_card NOSLIDE_1" href="amarok.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="garage_model_card NOSLIDE_2" href="./pages/ford.html">
+                        <a class="garage_model_card NOSLIDE_2" href="ford.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/ford.webp" type="image/webp">-->
@@ -345,7 +345,7 @@
 <!--                        </div>-->
 <!--                    </div>-->
                     <div class="traffic_patrol-no-slide-7 parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/amarok.html">
+                        <a class="garage_model_card" href="amarok.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
@@ -373,7 +373,7 @@
                         </a>
                     </div>
                     <div class="traffic_patrol-no-slide-8 parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/ford.html">
+                        <a class="garage_model_card" href="ford.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/ford.webp" type="image/webp">-->
@@ -405,7 +405,7 @@
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
                         </p>
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
                         </p>
                     </div>
                     <div class="traffic_patrol-text-mobile-2">
@@ -422,7 +422,7 @@
 <!--                <div class="traffic_patrol-slide-6">-->
 <!--                    <div class="traffic_patrol_slider-wrapper swiper">-->
 <!--                        <div class="traffic_patrol_slider swiper-wrapper">-->
-<!--                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
+<!--                            <a class="garage_model_card swiper-slide" href="/amarok.html">-->
 <!--                                <div class="slid_img">-->
 <!--                                    <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>-->
 <!--                                </div>-->
@@ -443,7 +443,7 @@
 <!--                                    </div>-->
 <!--                                </div>-->
 <!--                            </a>-->
-<!--                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
+<!--                            <a class="garage_model_card swiper-slide" href="/amarok.html">-->
 <!--                                <div class="slid_img">-->
 <!--                                    <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>-->
 <!--                                </div>-->
@@ -464,7 +464,7 @@
 <!--                                    </div>-->
 <!--                                </div>-->
 <!--                            </a>-->
-<!--                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
+<!--                            <a class="garage_model_card swiper-slide" href="/amarok.html">-->
 <!--                                <div class="slid_img">-->
 <!--                                    <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>-->
 <!--                                </div>-->
@@ -515,7 +515,7 @@
 <!--                        <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">-->
                     </div>
                     <div class="slider-5">
-                        <a class="garage_model_card" href="./pages/bus.html">
+                        <a class="garage_model_card" href="bus.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/bus.webp" type="image/webp">-->
@@ -583,7 +583,7 @@
                             </div>
                             <div class="bus_text_info">
                                 <p class="bus_descr">
-                                    Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен
+                                    Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для&nbsp;специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен
                                 </p>
                             </div>
                         </div>
@@ -634,7 +634,7 @@
                         <h1 class="water_patrol-title title"><span class="water_patrol-animation-1">водный</span> <span class="water_patrol-animation-2">патруль</span></h1>
                     </div>
                     <div class="water_patrol_card parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/kater.html">
+                        <a class="garage_model_card" href="kater.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/kater.webp" type="image/webp">-->
@@ -706,7 +706,7 @@
                         <p>Патруль следит за&nbsp;дорожной инфраструктурой: состоянием знаков, светофоров, навигационных стел, велопарковок и&nbsp;проч. Кроме того, в&nbsp;обязанности велопатруля входит освобождать велополосы, тротуары и&nbsp;пешеходные переходы от&nbsp;припаркованных автомобилей</p>
                     </div>
                     <div class="velo_patrol_card parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/velo.html">
+                        <a class="garage_model_card" href="velo.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/velo.webp" type="image/webp">-->
@@ -746,7 +746,7 @@
                     <div class="parkon-2">
                         <p class="parkon_title">Создана на&nbsp;базе мобильных комплексов фотовидеофиксации</p>
                         <div class="parkon_descr">
-                            <p class="parkon_text">110 автомобилей патрулируют город 24/7 и&nbsp;приезжают к&nbsp;водителям, которые попали в&nbsp;ДТП или столкнулись со&nbsp;сложностями на&nbsp;дороге</p>
+                            <p class="parkon_text">110 автомобилей патрулируют город 24/7 и&nbsp;приезжают к&nbsp;водителям, которые попали в&nbsp;ДТП или&nbsp;столкнулись со&nbsp;сложностями на&nbsp;дороге</p>
                             <p class="parkon_text">На&nbsp;машинах установлены камеры, которые автоматически следят за&nbsp;соблюдением ПДД, а&nbsp;также распознают транспорт, который находится в&nbsp;розыске</p>
                         </div>
                     </div>
@@ -981,7 +981,7 @@
                         <p class="mobile_text_combo-text">С&nbsp;2023 года автопарк Службы помощи пополнился электрическими кроссоверами Москвич&nbsp;3е</p>
                     </div>
 <!--                    <div class="slide-5">-->
-<!--                        <a class="garage_model_card" href="./pages/ford.html">-->
+<!--                        <a class="garage_model_card" href="/ford.html">-->
 <!--                            <div class="slid_img">-->
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Служба помощи">-->
 <!--                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>-->
@@ -1005,7 +1005,7 @@
 <!--                        </a>-->
 <!--                    </div>-->
                     <div class="slide-5 parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/solaris_two.html">
+                        <a class="garage_model_card" href="solaris_two.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
@@ -1033,7 +1033,7 @@
                         </a>
                     </div>
                     <div class="slide-moskvich parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/moskvich.html">
+                        <a class="garage_model_card" href="moskvich.html">
                             <div class="slid_img">
                                 <picture>
 <!--                                    <source srcset="./img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
@@ -1063,7 +1063,7 @@
                     <div class="equipment_mobile-slide">
                         <div class="traffic_patrol_slider-wrapper swiper3">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide" href="./pages/moskvich.html">
+                                <a class="garage_model_card swiper-slide" href="moskvich.html">
                                     <div class="slid_img">
                                         <picture>
 <!--                                            <source srcset="./img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
@@ -1089,7 +1089,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
+                                <a class="garage_model_card swiper-slide" href="solaris_two.html">
                                     <div class="slid_img">
                                         <picture>
 <!--                                            <source srcset="./img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
