--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -373,7 +373,7 @@
                             <div class="tech_spec__outfit-img">
                                 <img src="../img/layout/outfit/bus/outfit_6.svg" alt="Рабочие места" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Рабочие места</span>
+                            <span class="tech_spec__outfit-text">Рабочие места сотрудников</span>
                         </li>
                     </ul>
                 </div>
@@ -412,7 +412,7 @@
                 <div class="auto_park_slider-overflow swiper_model">
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/amarok.html">
+                            <a class="gallery_item_link" href="amarok.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
@@ -421,7 +421,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/ford.html">
+                            <a class="gallery_item_link" href="ford.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
@@ -430,7 +430,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/kater.html">
+                            <a class="gallery_item_link" href="kater.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
@@ -439,7 +439,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/solaris_two.html">
+                            <a class="gallery_item_link" href="solaris_two.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
@@ -457,7 +457,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/moskvich.html">
+                            <a class="gallery_item_link" href="moskvich.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
@@ -466,7 +466,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/velo.html">
+                            <a class="gallery_item_link" href="velo.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="moskvich" fetchpriority="high">
