--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -472,7 +472,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/ford.html">
+                            <a class="gallery_item_link" href="ford.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
@@ -481,7 +481,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/kater.html">
+                            <a class="gallery_item_link" href="kater.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
@@ -490,7 +490,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/solaris_two.html">
+                            <a class="gallery_item_link" href="solaris_two.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
@@ -499,7 +499,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/bus.html">
+                            <a class="gallery_item_link" href="bus.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
@@ -508,7 +508,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/moskvich.html">
+                            <a class="gallery_item_link" href="moskvich.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
@@ -517,7 +517,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/velo.html">
+                            <a class="gallery_item_link" href="velo.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
@@ -907,11 +907,6 @@
         initializeModelApi();
     });
 </script>
-<!--<script>-->
-<!--    window.addEventListener('beforeunload', function (event) {-->
-<!--        event.preventDefault();-->
-<!--    });-->
-<!--</script>-->
 <script>
     // setTimeout(() => {
         let currentInfoPanel = null;
