--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -424,7 +424,7 @@
                 <div class="auto_park_slider-overflow swiper_model">
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/amarok.html">
+                            <a class="gallery_item_link" href="amarok.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
@@ -433,7 +433,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/ford.html">
+                            <a class="gallery_item_link" href="ford.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
@@ -442,7 +442,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/kater.html">
+                            <a class="gallery_item_link" href="kater.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
@@ -451,7 +451,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/solaris_two.html">
+                            <a class="gallery_item_link" href="solaris_two.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
@@ -460,7 +460,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/bus.html">
+                            <a class="gallery_item_link" href="bus.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
@@ -469,7 +469,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="../pages/moskvich.html">
+                            <a class="gallery_item_link" href="moskvich.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
@@ -478,7 +478,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide active">
-                            <a class="gallery_item_link" href="../pages/velo.html">
+                            <a class="gallery_item_link" href="velo.html">
                                 <picture>
 <!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
